--- a/Week_3_NBM/Naive_Bayes_Model.ipynb
+++ b/Week_3_NBM/Naive_Bayes_Model.ipynb
@@ -10,25 +10,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Term Frequency\n",
-    "TF — это частотность термина, которая измеряет, насколько часто термин встречается в документе. Логично предположить, что в длинных документах термин может встретиться в больших количествах, чем в коротких, поэтому абсолютные числа тут не катят. Поэтому применяют относительные — делят количество раз, когда нужный термин встретился в тексте, на общее количество слов в тексте. \n",
-    "\n",
-    "## Inverse Document Frequency\n",
-    "IDF — это обратная частотность документов. Она измеряет непосредственно важность термина. То есть, когда мы считали TF, все термины считаются как бы равными по важности друг другу. Но всем известно, что, например, предлоги встречаются очень часто, хотя практически не влияют на смысл текста. И что с этим поделать? Ответ прост — посчитать IDF. Он считается как логарифм от общего количества документов, делённого на количество документов, в которых встречается термин а.\n",
-    "\n",
-    "#### TF термина а = (Количество раз, когда термин а встретился в тексте / количество всех слов в тексте)\n",
-    "#### IDF термина а = (Общее количество документов / Количество документов, в которых встречается термин а)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
     "import math\n",
     "from collections import Counter\n",
     "from collections import defaultdict\n",
@@ -37,14 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "class NaiveBayes:\n",
-    "    def __init__(self, data):\n",
+    "    def __init__(self, data, isUseLog = False):\n",
     "        self.corpus, self.labels  = self.data_split(data)\n",
     "        self.classes = Counter(self.labels)\n",
+    "        self.isUseLog = isUseLog\n",
     "     \n",
     "    def data_split(self, data):\n",
     "        corpus = []\n",
@@ -53,6 +41,14 @@
     "            corpus.append(text.split())\n",
     "            labels.append(label)\n",
     "        return corpus, labels\n",
+    "    \n",
+    "    def get_data_statistic(self):\n",
+    "        print (\"*** NaiveBayes data statistic ***\")\n",
+    "        print (\"Corpus length = \", len(self.corpus))\n",
+    "        print (\"classes count = \", dict(self.classes))\n",
+    "        print (\"classes ratio = \", {i: self.classes[i]/len(self.corpus) for i in self.classes} )\n",
+    "        print (\"unique words in corpus = \", self.get_unique_words())\n",
+    "        print (\"*** ------------------------- ***\")\n",
     "    \n",
     "    def get_unique_words(self):\n",
     "        unique_words_in_corpus = Counter()\n",
@@ -72,8 +68,9 @@
     "        return self.classes[class_label]/len(self.corpus)          \n",
     "    \n",
     "    def get_p (self, class_label, word):\n",
+    "        # P(word|class) = (word_count_in_class + 1)/(total_words_in_class+total_unique_words_in_corpus) \n",
     "        p = (self.words[class_label][word] + 1)/(self.total[class_label] + self.unique)\n",
-    "        return p #math.log(p)\n",
+    "        return p\n",
     "    \n",
     "    def fit(self):\n",
     "        self.words, self.total = self.get_class_words()\n",
@@ -83,72 +80,200 @@
     "        p = dict()\n",
     "        for label in self.classes:\n",
     "            p[label] = self.get_prior (label)\n",
+    "            if self.isUseLog:\n",
+    "                p[label] = math.log(p[label])\n",
     "            for word in doc.split():\n",
-    "                p[label] *= self.get_p(label,word)\n",
+    "                if self.isUseLog:\n",
+    "                    p[label] += math.log(self.get_p(label,word))\n",
+    "                else:\n",
+    "                    p[label] *= self.get_p(label,word)\n",
     "        y = max(p, key=p.get)\n",
     "        return y, p \n",
     "    \n",
     "    def predict(self, docs):\n",
-    "        matches = np.zeros(len(docs))\n",
+    "        matches = [] #np.zeros(len(docs))\n",
     "        for doc, label in docs:\n",
     "            y,p = self.predict_doc(doc)\n",
-    "            matches[i] = (y == label)\n",
-    "        return matches\n",
+    "            matches.append(y == label)\n",
+    "        return Counter(matches)\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 {'0': 0.00030121377997263036, '1': 0.00013548070246744226}\n"
+      "*** NaiveBayes data statistic ***\n",
+      "Corpus length =  4\n",
+      "classes count =  {'0': 3, '1': 1}\n",
+      "classes ratio =  {'0': 0.75, '1': 0.25}\n",
+      "unique words in corpus =  6\n",
+      "*** ------------------------- ***\n",
+      "pobability    0 {'0': 0.00030121377997263036, '1': 0.00013548070246744226}\n",
+      "log           0 {'0': -8.10769031284391, '1': -8.906681345001262}\n"
      ]
     }
    ],
    "source": [
-    "# Train data\n",
+    "# Test NaiveBayes Model for Train data\n",
     "data = [[\"Chinese Beijing Chinese\",\"0\"],\n",
     "        [\"Chinese Chinese Shanghai\",\"0\"],\n",
     "        [\"Chinese Macao\",\"0\"],\n",
     "        [\"Tokyo Japan Chinese\",\"1\"]]\n",
     "pred =  \"Chinese Chinese Chinese Tokyo Japan\"\n",
     "\n",
+    "# pobability\n",
     "nbm = NaiveBayes(data)\n",
+    "nbm.get_data_statistic()\n",
     "nbm.fit()\n",
     "y,p = nbm.predict_doc(pred)\n",
-    "print(y,p)\n",
+    "print(\"pobability   \", y, p)\n",
     "\n",
-    "# model\n",
-    "#nbm = NaiveBayes(data_train)\n",
-    "#nbm.fit()\n",
-    "#matches = nbm.predict(data_test)\n",
-    "#print (\"Accuracy: \", matches.mean()) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data.csv\n",
+    "# log\n",
+    "nbm = NaiveBayes(data, True)\n",
+    "nbm.fit()\n",
+    "y,p = nbm.predict_doc(pred)\n",
+    "print(\"log          \", y, p)\n",
+    "\n",
+    "# Must return[ ('Chinese Chinese Chinese Tokyo Japan', '0')]\n",
+    "# pobability {'1': 0.00013548070246744226, '0': 0.00030121377997263036}\n",
+    "# or log     {'1': -7.906681345001262, '0': -7.10769031284391}\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1118 894 224\n",
+      "------------\n",
+      "*** NaiveBayes data statistic ***\n",
+      "Corpus length =  1118\n",
+      "classes count =  {'0': 380, '1': 738}\n",
+      "classes ratio =  {'0': 0.33989266547406083, '1': 0.6601073345259392}\n",
+      "unique words in corpus =  40392\n",
+      "*** ------------------------- ***\n",
+      "*** NaiveBayes data statistic ***\n",
+      "Corpus length =  894\n",
+      "classes count =  {'0': 297, '1': 597}\n",
+      "classes ratio =  {'0': 0.33221476510067116, '1': 0.6677852348993288}\n",
+      "unique words in corpus =  31881\n",
+      "*** ------------------------- ***\n",
+      "*** NaiveBayes data statistic ***\n",
+      "Corpus length =  224\n",
+      "classes count =  {'1': 141, '0': 83}\n",
+      "classes ratio =  {'1': 0.6294642857142857, '0': 0.3705357142857143}\n",
+      "unique words in corpus =  17518\n",
+      "*** ------------------------- ***\n",
+      "Wall time: 2.31 s\n"
+     ]
+    }
+   ],
    "source": [
-    "# Must return[ ('Chinese Chinese Chinese Tokyo Japan', '0')]\n",
-    "# pobability {'1': 0.00013548070246744226, '0': 0.00030121377997263036}\n",
-    "# or log     {'1': -7.906681345001262, '0': -7.10769031284391}\n"
+    "%%time\n",
+    "\n",
+    "# data.csv prepare dataset\n",
+    "\n",
+    "def read_csv_file(file_name):\n",
+    "    with open(file_name, 'r') as csv_file:\n",
+    "        reader = csv.reader(csv_file)\n",
+    "        data = [doc for doc in reader]\n",
+    "        csv_file.close()    \n",
+    "    return data\n",
+    "\n",
+    "def train_verif_split(data, train_persent):\n",
+    "    train_count = int(len(data)*train_persent/100.0)\n",
+    "    train = data[:train_count]\n",
+    "    verif = data[train_count:]\n",
+    "    return train, verif\n",
+    "\n",
+    "data = read_csv_file(\"data.csv\")\n",
+    "train, verif = train_verif_split (data, 80.0)\n",
+    "\n",
+    "# print statistic\n",
+    "\n",
+    "print(len(data), len(train), len(verif))\n",
+    "print(\"------------\")\n",
+    "\n",
+    "nbm = NaiveBayes(data)\n",
+    "nbm.get_data_statistic()\n",
+    "\n",
+    "nbm = NaiveBayes(train)\n",
+    "nbm.get_data_statistic()\n",
+    "\n",
+    "nbm = NaiveBayes(verif)\n",
+    "nbm.get_data_statistic()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pobability\n",
+      "Matches:   Counter({True: 114, False: 110})\n",
+      "Accuracy:  {False: 0.49107142857142855, True: 0.5089285714285714}\n",
+      "----------\n",
+      "log\n",
+      "Matches:   Counter({True: 216, False: 8})\n",
+      "Accuracy:  {True: 0.9642857142857143, False: 0.03571428571428571}\n",
+      "----------\n",
+      "Wall time: 2.91 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# data.csv model\n",
+    "data = read_csv_file(\"data.csv\")\n",
+    "train, verif = train_verif_split (data, 80.0)\n",
+    "\n",
+    "nbm = NaiveBayes(train)\n",
+    "nbm.fit()\n",
+    "matches = nbm.predict(verif)\n",
+    "print (\"pobability\")\n",
+    "print (\"Matches:  \", matches) \n",
+    "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
+    "print (\"----------\")\n",
+    "\n",
+    "nbm = NaiveBayes(train, True)\n",
+    "nbm.fit()\n",
+    "matches = nbm.predict(verif)\n",
+    "print (\"log\")\n",
+    "print (\"Matches:  \", matches) \n",
+    "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
+    "print (\"----------\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TF-IDF\n",
+    "\n",
+    "## Term Frequency\n",
+    "TF — это частотность термина, которая измеряет, насколько часто термин встречается в документе. Логично предположить, что в длинных документах термин может встретиться в больших количествах, чем в коротких, поэтому абсолютные числа тут не катят. Поэтому применяют относительные — делят количество раз, когда нужный термин встретился в тексте, на общее количество слов в тексте. \n",
+    "\n",
+    "## Inverse Document Frequency\n",
+    "IDF — это обратная частотность документов. Она измеряет непосредственно важность термина. То есть, когда мы считали TF, все термины считаются как бы равными по важности друг другу. Но всем известно, что, например, предлоги встречаются очень часто, хотя практически не влияют на смысл текста. И что с этим поделать? Ответ прост — посчитать IDF. Он считается как логарифм от общего количества документов, делённого на количество документов, в которых встречается термин а.\n",
+    "\n",
+    "#### TF термина а = (Количество раз, когда термин а встретился в тексте / количество всех слов в тексте)\n",
+    "#### IDF термина а = (Общее количество документов / Количество документов, в которых встречается термин а)"
    ]
   },
   {
