Week 3 NBM. Optimization - Del stopwords and use lowercase

--- a/Week_3_NBM/Naive_Bayes_Model.ipynb
+++ b/Week_3_NBM/Naive_Bayes_Model.ipynb
@@ -11,20 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
     "import csv\n",
     "import math\n",
     "from collections import Counter\n",
     "from collections import defaultdict\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "demo_data = [[\"Chinese Beijing Chinese\",\"0\"],\n",
+    "             [\"Chinese Chinese Shanghai\",\"0\"],\n",
+    "             [\"Chinese Macao\",\"0\"],\n",
+    "             [\"Tokyo Japan Chinese\",\"1\"]]\n",
+    "demo_pred =  \"Chinese Chinese Chinese Tokyo Japan\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +53,7 @@
     "        corpus = []\n",
     "        labels = []\n",
     "        for text, label in data:\n",
-    "            corpus.append(text.split())\n",
+    "            corpus.append(text.lower().split())\n",
     "            labels.append(label)\n",
     "        return corpus, labels\n",
     "    \n",
@@ -82,7 +97,7 @@
     "            p[label] = self.get_prior (label)\n",
     "            if self.isUseLog:\n",
     "                p[label] = math.log(p[label])\n",
-    "            for word in doc.split():\n",
+    "            for word in doc.lower().split():\n",
     "                if self.isUseLog:\n",
     "                    p[label] += math.log(self.get_p(label,word))\n",
     "                else:\n",
@@ -91,7 +106,7 @@
     "        return y, p \n",
     "    \n",
     "    def predict(self, docs):\n",
-    "        matches = [] #np.zeros(len(docs))\n",
+    "        matches = []\n",
     "        for doc, label in docs:\n",
     "            y,p = self.predict_doc(doc)\n",
     "            matches.append(y == label)\n",
@@ -101,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -120,62 +135,56 @@
     }
    ],
    "source": [
-    "# Test NaiveBayes Model for Train data\n",
-    "data = [[\"Chinese Beijing Chinese\",\"0\"],\n",
-    "        [\"Chinese Chinese Shanghai\",\"0\"],\n",
-    "        [\"Chinese Macao\",\"0\"],\n",
-    "        [\"Tokyo Japan Chinese\",\"1\"]]\n",
-    "pred =  \"Chinese Chinese Chinese Tokyo Japan\"\n",
+    "# Test NaiveBayes Model for demo data\n",
     "\n",
     "# pobability\n",
-    "nbm = NaiveBayes(data)\n",
+    "nbm = NaiveBayes(demo_data)\n",
     "nbm.get_data_statistic()\n",
     "nbm.fit()\n",
-    "y,p = nbm.predict_doc(pred)\n",
+    "y,p = nbm.predict_doc(demo_pred)\n",
     "print(\"pobability   \", y, p)\n",
     "\n",
     "# log\n",
-    "nbm = NaiveBayes(data, True)\n",
+    "nbm = NaiveBayes(demo_data, True)\n",
     "nbm.fit()\n",
-    "y,p = nbm.predict_doc(pred)\n",
+    "y,p = nbm.predict_doc(demo_pred)\n",
     "print(\"log          \", y, p)\n",
     "\n",
     "# Must return[ ('Chinese Chinese Chinese Tokyo Japan', '0')]\n",
     "# pobability {'1': 0.00013548070246744226, '0': 0.00030121377997263036}\n",
-    "# or log     {'1': -7.906681345001262, '0': -7.10769031284391}\n",
-    "\n"
+    "# or log     {'1': -7.906681345001262, '0': -7.10769031284391}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1118 894 224\n",
+      "1118 = 894 + 224\n",
       "------------\n",
       "*** NaiveBayes data statistic ***\n",
       "Corpus length =  1118\n",
       "classes count =  {'0': 380, '1': 738}\n",
       "classes ratio =  {'0': 0.33989266547406083, '1': 0.6601073345259392}\n",
-      "unique words in corpus =  40392\n",
+      "unique words in corpus =  33697\n",
       "*** ------------------------- ***\n",
       "*** NaiveBayes data statistic ***\n",
       "Corpus length =  894\n",
       "classes count =  {'0': 297, '1': 597}\n",
       "classes ratio =  {'0': 0.33221476510067116, '1': 0.6677852348993288}\n",
-      "unique words in corpus =  31881\n",
+      "unique words in corpus =  26275\n",
       "*** ------------------------- ***\n",
       "*** NaiveBayes data statistic ***\n",
       "Corpus length =  224\n",
       "classes count =  {'1': 141, '0': 83}\n",
       "classes ratio =  {'1': 0.6294642857142857, '0': 0.3705357142857143}\n",
-      "unique words in corpus =  17518\n",
+      "unique words in corpus =  15295\n",
       "*** ------------------------- ***\n",
-      "Wall time: 2.31 s\n"
+      "Wall time: 1.81 s\n"
      ]
     }
    ],
@@ -191,18 +200,26 @@
     "        csv_file.close()    \n",
     "    return data\n",
     "\n",
+    "def delete_stopwords(data):\n",
+    "    # nltk.download('stopwords')  # 1 time or nltk.download()\n",
+    "    stopwords = nltk.corpus.stopwords.words('english')\n",
+    "    pattern = re.compile(r'\\b(' + r'|'.join(stopwords) + r')\\b\\s*')\n",
+    "    for i in range(len(data)):   \n",
+    "        data[i][0] = data[i][0].lower()\n",
+    "        data[i][0] = pattern.sub('', data[i][0])   # filter(lambda x: x not in stopwords, data[i][0])\n",
+    "    return data\n",
+    "\n",
     "def train_verif_split(data, train_persent):\n",
     "    train_count = int(len(data)*train_persent/100.0)\n",
     "    train = data[:train_count]\n",
     "    verif = data[train_count:]\n",
     "    return train, verif\n",
     "\n",
+    "# print statistic\n",
     "data = read_csv_file(\"data.csv\")\n",
     "train, verif = train_verif_split (data, 80.0)\n",
     "\n",
-    "# print statistic\n",
-    "\n",
-    "print(len(data), len(train), len(verif))\n",
+    "print(len(data), \"=\", len(train), \"+\", len(verif))\n",
     "print(\"------------\")\n",
     "\n",
     "nbm = NaiveBayes(data)\n",
@@ -212,12 +229,12 @@
     "nbm.get_data_statistic()\n",
     "\n",
     "nbm = NaiveBayes(verif)\n",
-    "nbm.get_data_statistic()\n"
+    "nbm.get_data_statistic()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -225,14 +242,18 @@
      "output_type": "stream",
      "text": [
       "pobability\n",
-      "Matches:   Counter({True: 114, False: 110})\n",
-      "Accuracy:  {False: 0.49107142857142855, True: 0.5089285714285714}\n",
+      "Matches:   Counter({True: 117, False: 107})\n",
+      "Accuracy:  {False: 0.47767857142857145, True: 0.5223214285714286}\n",
       "----------\n",
       "log\n",
-      "Matches:   Counter({True: 216, False: 8})\n",
-      "Accuracy:  {True: 0.9642857142857143, False: 0.03571428571428571}\n",
+      "Matches:   Counter({True: 214, False: 10})\n",
+      "Accuracy:  {True: 0.9553571428571429, False: 0.044642857142857144}\n",
       "----------\n",
-      "Wall time: 2.91 s\n"
+      "log without stopwords\n",
+      "Matches:   Counter({True: 211, False: 13})\n",
+      "Accuracy:  {True: 0.9419642857142857, False: 0.05803571428571429}\n",
+      "----------\n",
+      "Wall time: 4.17 s\n"
      ]
     }
    ],
@@ -257,14 +278,22 @@
     "print (\"log\")\n",
     "print (\"Matches:  \", matches) \n",
     "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
-    "print (\"----------\")"
+    "print (\"----------\")\n",
+    "\n",
+    "nbm = NaiveBayes(delete_stopwords(train), True)\n",
+    "nbm.fit()\n",
+    "matches = nbm.predict(delete_stopwords(verif))\n",
+    "print (\"log without stopwords\")\n",
+    "print (\"Matches:  \", matches) \n",
+    "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
+    "print (\"----------\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TF-IDF\n",
+    "# TF-IDF algorithm\n",
     "\n",
     "## Term Frequency\n",
     "TF — это частотность термина, которая измеряет, насколько часто термин встречается в документе. Логично предположить, что в длинных документах термин может встретиться в больших количествах, чем в коротких, поэтому абсолютные числа тут не катят. Поэтому применяют относительные — делят количество раз, когда нужный термин встретился в тексте, на общее количество слов в тексте. \n",
@@ -278,40 +307,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'pasta': 0.5, 'la': 0.3333333333333333, 'vista': 1.0, 'baby': 0.16666666666666666}, {'hasta': 0.5, 'siempre': 0.5, 'comandante': 0.25, 'baby': 0.16666666666666666, 'la': 0.16666666666666666}, {'siempre': 0.6000000000000001, 'comandante': 0.30000000000000004, 'baby': 0.2, 'la': 0.2}]\n"
+      "[['chinese', 'beijing', 'chinese'], ['chinese', 'chinese', 'shanghai'], ['chinese', 'macao'], ['tokyo', 'japan', 'chinese']]\n",
+      "[{'pasta': 0.05555555555555555, 'la': 0.3333333333333333, 'vista': 0.1111111111111111, 'baby': 0.16666666666666666}, {'hasta': 0.05555555555555555, 'siempre': 0.2222222222222222, 'comandante': 0.1111111111111111, 'baby': 0.16666666666666666, 'la': 0.16666666666666666}, {'siempre': 0.26666666666666666, 'comandante': 0.13333333333333333, 'baby': 0.2, 'la': 0.2}]\n",
+      "---------------\n",
+      "[{'chinese': 0.6666666666666666, 'beijing': 0.08333333333333333}, {'chinese': 0.6666666666666666, 'shanghai': 0.08333333333333333}, {'chinese': 0.5, 'macao': 0.125}, {'tokyo': 0.08333333333333333, 'japan': 0.08333333333333333, 'chinese': 0.3333333333333333}]\n"
      ]
     }
    ],
    "source": [
     "# TF-IDF\n",
     "\n",
-    "def calc_tf(docum):\n",
+    "nbm = NaiveBayes(demo_data)\n",
+    "print(nbm.corpus)\n",
+    "\n",
+    "def calc_tf(doc):\n",
     "    \"\"\"\n",
-    "    parameters: docum - List of words\n",
+    "    parameters: doc - List of words\n",
     "    returns: Counter object with TF for all words in docum\n",
     "    \"\"\"\n",
-    "    tf = Counter(docum)\n",
+    "    tf = Counter(doc)\n",
     "    for i in tf:\n",
-    "        tf[i] = tf[i]/float(len(docum))\n",
+    "        tf[i] = tf[i]/float(len(doc))\n",
     "    return tf\n",
     "\n",
     "def calc_idf(word, corpus):\n",
     "    \"\"\"\n",
-    "    parameters: corpus - List of texts\n",
+    "    parameters: corpus - List of docs\n",
     "                word - or which to calculate IDF\n",
     "    returns: value, idf for word in corpus            \n",
     "    \"\"\"\n",
     "    word_in_doc_count = sum([1.0 for i in corpus if word in i])\n",
-    "    idf = word_in_doc_count/len(corpus)\n",
-    "    return idf\n",
-    "        \n",
+    "    idf = len(corpus) / word_in_doc_count\n",
+    "    return idf # math.log(idf)\n",
+    "      \n",
     "def calc_tfidf(corpus):\n",
     "    docs_list = []\n",
     "    for doc in corpus:\n",
@@ -326,7 +361,8 @@
     "         ['hasta', 'siempre', 'comandante', 'baby', 'la', 'siempre'], \n",
     "         ['siempre', 'comandante', 'baby', 'la', 'siempre']]\n",
     "print (calc_tfidf(texts))\n",
-    "\n",
+    "print (\"---------------\")\n",
+    "print (calc_tfidf(nbm.corpus))\n",
     "\n"
    ]
   },
