--- a/Week_3_NBM/Naive_Bayes_Model.ipynb
+++ b/Week_3_NBM/Naive_Bayes_Model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +71,30 @@
     "            unique_words_in_corpus += Counter(doc)\n",
     "        return len(unique_words_in_corpus)\n",
     "    \n",
+    "    def get_prior (self, class_label):\n",
+    "        return self.classes[class_label]/len(self.corpus)          \n",
+    "    \n",
+    "    def fit(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def predict_doc(self, doc):\n",
+    "        pass\n",
+    "    \n",
+    "    def predict(self, docs):\n",
+    "        matches = []\n",
+    "        for doc, label in docs:\n",
+    "            y,p = self.predict_doc(doc)\n",
+    "            matches.append(y == label)\n",
+    "        return Counter(matches)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NaiveBayesClassic(NaiveBayes):\n",
     "    def get_class_words(self):\n",
     "        total = defaultdict(int)\n",
     "        words = defaultdict(Counter)       \n",
@@ -78,10 +102,7 @@
     "            words[self.labels[i]] += Counter(self.corpus[i])\n",
     "            total[self.labels[i]] += len(self.corpus[i])\n",
     "        return words, total\n",
-    "    \n",
-    "    def get_prior (self, class_label):\n",
-    "        return self.classes[class_label]/len(self.corpus)          \n",
-    "    \n",
+    "        \n",
     "    def get_p (self, class_label, word):\n",
     "        # P(word|class) = (word_count_in_class + 1)/(total_words_in_class+total_unique_words_in_corpus) \n",
     "        p = (self.words[class_label][word] + 1)/(self.total[class_label] + self.unique)\n",
@@ -90,7 +111,7 @@
     "    def fit(self):\n",
     "        self.words, self.total = self.get_class_words()\n",
     "        self.unique = self.get_unique_words()\n",
-    "            \n",
+    "        \n",
     "    def predict_doc(self, doc):\n",
     "        p = dict()\n",
     "        for label in self.classes:\n",
@@ -103,20 +124,12 @@
     "                else:\n",
     "                    p[label] *= self.get_p(label,word)\n",
     "        y = max(p, key=p.get)\n",
-    "        return y, p \n",
-    "    \n",
-    "    def predict(self, docs):\n",
-    "        matches = []\n",
-    "        for doc, label in docs:\n",
-    "            y,p = self.predict_doc(doc)\n",
-    "            matches.append(y == label)\n",
-    "        return Counter(matches)\n",
-    "            "
+    "        return y, p "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,14 +151,14 @@
     "# Test NaiveBayes Model for demo data\n",
     "\n",
     "# pobability\n",
-    "nbm = NaiveBayes(demo_data)\n",
+    "nbm = NaiveBayesClassic(demo_data)\n",
     "nbm.get_data_statistic()\n",
     "nbm.fit()\n",
     "y,p = nbm.predict_doc(demo_pred)\n",
     "print(\"pobability   \", y, p)\n",
     "\n",
     "# log\n",
-    "nbm = NaiveBayes(demo_data, True)\n",
+    "nbm = NaiveBayesClassic(demo_data, True)\n",
     "nbm.fit()\n",
     "y,p = nbm.predict_doc(demo_pred)\n",
     "print(\"log          \", y, p)\n",
@@ -157,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +197,7 @@
       "classes ratio =  {'1': 0.6294642857142857, '0': 0.3705357142857143}\n",
       "unique words in corpus =  15295\n",
       "*** ------------------------- ***\n",
-      "Wall time: 1.81 s\n"
+      "Wall time: 5 s\n"
      ]
     }
    ],
@@ -234,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +266,7 @@
       "Matches:   Counter({True: 211, False: 13})\n",
       "Accuracy:  {True: 0.9419642857142857, False: 0.05803571428571429}\n",
       "----------\n",
-      "Wall time: 4.17 s\n"
+      "Wall time: 8.96 s\n"
      ]
     }
    ],
@@ -264,7 +277,7 @@
     "data = read_csv_file(\"data.csv\")\n",
     "train, verif = train_verif_split (data, 80.0)\n",
     "\n",
-    "nbm = NaiveBayes(train)\n",
+    "nbm = NaiveBayesClassic(train)\n",
     "nbm.fit()\n",
     "matches = nbm.predict(verif)\n",
     "print (\"pobability\")\n",
@@ -272,7 +285,7 @@
     "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
     "print (\"----------\")\n",
     "\n",
-    "nbm = NaiveBayes(train, True)\n",
+    "nbm = NaiveBayesClassic(train, True)\n",
     "nbm.fit()\n",
     "matches = nbm.predict(verif)\n",
     "print (\"log\")\n",
@@ -280,7 +293,7 @@
     "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
     "print (\"----------\")\n",
     "\n",
-    "nbm = NaiveBayes(delete_stopwords(train), True)\n",
+    "nbm = NaiveBayesClassic(delete_stopwords(train), True)\n",
     "nbm.fit()\n",
     "matches = nbm.predict(delete_stopwords(verif))\n",
     "print (\"log without stopwords\")\n",
@@ -307,63 +320,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NaiveBayesTfIdf(NaiveBayes):\n",
+    "    def calc_tf(self, doc):\n",
+    "        tf = Counter(doc)\n",
+    "        for i in tf:\n",
+    "            tf[i] = tf[i]/float(len(doc))\n",
+    "        return tf\n",
+    "\n",
+    "    def calc_idf(self, word):\n",
+    "        idf = defaultdict(float)\n",
+    "        for i in range(len(self.corpus)):\n",
+    "            if word in self.corpus[i]:\n",
+    "                idf[self.labels[i]] += 1\n",
+    "        return {label: self.classes[label]/(idf[label]+1) for label in self.classes}\n",
+    "    \n",
+    "    def get_words_idf(self):\n",
+    "        idfs = defaultdict(dict)\n",
+    "        \n",
+    "        unique_words_in_corpus = Counter()\n",
+    "        for doc in self.corpus:\n",
+    "            unique_words_in_corpus += Counter(doc)\n",
+    "        for word in unique_words_in_corpus:\n",
+    "            idfs[word] = self.calc_idf(word)\n",
+    "        return idfs\n",
+    "    \n",
+    "    def fit(self):\n",
+    "        self.idf = self.get_words_idf()\n",
+    "        \n",
+    "    def predict_doc(self, doc):\n",
+    "        doc = doc.lower().split()\n",
+    "        tf = self.calc_tf(doc)\n",
+    "        p = dict()\n",
+    "        for label in self.classes:\n",
+    "            p[label] = self.get_prior (label)\n",
+    "            if self.isUseLog:\n",
+    "                p[label] = math.log(p[label])\n",
+    "            for word in doc:\n",
+    "                if word in self.idf:\n",
+    "                    idf_ = self.idf[word][label]\n",
+    "                else:\n",
+    "                    idf_ = 1.0 # 1.0/tf[word]\n",
+    "                if self.isUseLog:\n",
+    "                    p[label] += math.log(tf[word]*idf_)\n",
+    "                else:\n",
+    "                    p[label] *= tf[word]*idf_\n",
+    "        y = max(p, key=p.get)\n",
+    "        return y, p "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['chinese', 'beijing', 'chinese'], ['chinese', 'chinese', 'shanghai'], ['chinese', 'macao'], ['tokyo', 'japan', 'chinese']]\n",
-      "[{'pasta': 0.05555555555555555, 'la': 0.3333333333333333, 'vista': 0.1111111111111111, 'baby': 0.16666666666666666}, {'hasta': 0.05555555555555555, 'siempre': 0.2222222222222222, 'comandante': 0.1111111111111111, 'baby': 0.16666666666666666, 'la': 0.16666666666666666}, {'siempre': 0.26666666666666666, 'comandante': 0.13333333333333333, 'baby': 0.2, 'la': 0.2}]\n",
-      "---------------\n",
-      "[{'chinese': 0.6666666666666666, 'beijing': 0.08333333333333333}, {'chinese': 0.6666666666666666, 'shanghai': 0.08333333333333333}, {'chinese': 0.5, 'macao': 0.125}, {'tokyo': 0.08333333333333333, 'japan': 0.08333333333333333, 'chinese': 0.3333333333333333}]\n"
+      "pobability    0 {'0': 0.02460375, '1': 6.75e-05}\n",
+      "log           0 {'0': -3.704856408637077, '1': -9.603382960085789}\n"
      ]
     }
    ],
    "source": [
     "# TF-IDF\n",
     "\n",
-    "nbm = NaiveBayes(demo_data)\n",
-    "print(nbm.corpus)\n",
+    "# pobability\n",
+    "nbm = NaiveBayesTfIdf(demo_data)\n",
+    "nbm.fit()\n",
+    "y,p = nbm.predict_doc(demo_pred)\n",
+    "print(\"pobability   \", y, p)\n",
     "\n",
-    "def calc_tf(doc):\n",
-    "    \"\"\"\n",
-    "    parameters: doc - List of words\n",
-    "    returns: Counter object with TF for all words in docum\n",
-    "    \"\"\"\n",
-    "    tf = Counter(doc)\n",
-    "    for i in tf:\n",
-    "        tf[i] = tf[i]/float(len(doc))\n",
-    "    return tf\n",
+    "# log\n",
+    "nbm = NaiveBayesTfIdf(demo_data, True)\n",
+    "nbm.fit()\n",
+    "y,p = nbm.predict_doc(demo_pred)\n",
+    "print(\"log          \", y, p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*** NaiveBayes data statistic ***\n",
+      "Corpus length =  40\n",
+      "classes count =  {'1': 29, '0': 11}\n",
+      "classes ratio =  {'1': 0.725, '0': 0.275}\n",
+      "unique words in corpus =  2622\n",
+      "*** ------------------------- ***\n",
+      "pobability\n",
+      "Matches:   Counter({False: 32, True: 8})\n",
+      "Accuracy:  {False: 0.8, True: 0.2}\n",
+      "----------\n",
+      "Wall time: 703 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "\n",
-    "def calc_idf(word, corpus):\n",
-    "    \"\"\"\n",
-    "    parameters: corpus - List of docs\n",
-    "                word - or which to calculate IDF\n",
-    "    returns: value, idf for word in corpus            \n",
-    "    \"\"\"\n",
-    "    word_in_doc_count = sum([1.0 for i in corpus if word in i])\n",
-    "    idf = len(corpus) / word_in_doc_count\n",
-    "    return idf # math.log(idf)\n",
-    "      \n",
-    "def calc_tfidf(corpus):\n",
-    "    docs_list = []\n",
-    "    for doc in corpus:\n",
-    "        tf_idf_dict = {}\n",
-    "        tf = calc_tf(doc)\n",
-    "        for word in tf:\n",
-    "            tf_idf_dict[word] = tf[word] / calc_idf(word, corpus)\n",
-    "        docs_list.append(tf_idf_dict)\n",
-    "    return docs_list\n",
+    "# data.csv model\n",
+    "data = read_csv_file(\"data.csv\")\n",
+    "train, verif = train_verif_split (data[:200], 80.0)\n",
     "\n",
-    "texts = [['pasta', 'la', 'vista', 'baby', 'la', 'vista'], \n",
-    "         ['hasta', 'siempre', 'comandante', 'baby', 'la', 'siempre'], \n",
-    "         ['siempre', 'comandante', 'baby', 'la', 'siempre']]\n",
-    "print (calc_tfidf(texts))\n",
-    "print (\"---------------\")\n",
-    "print (calc_tfidf(nbm.corpus))\n",
-    "\n"
+    "nbm = NaiveBayesTfIdf(verif)\n",
+    "nbm.get_data_statistic()\n",
+    "nbm.fit()\n",
+    "matches = nbm.predict(verif)\n",
+    "print (\"pobability\")\n",
+    "print (\"Matches:  \", matches) \n",
+    "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
+    "print (\"----------\")\n",
+    "\n",
+    "'''\n",
+    "nbm = NaiveBayesTfIdf(train, True)\n",
+    "nbm.fit()\n",
+    "matches = nbm.predict(verif)\n",
+    "print (\"log\")\n",
+    "print (\"Matches:  \", matches) \n",
+    "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
+    "print (\"----------\")\n",
+    "\n",
+    "nbm = NaiveBayesTfIdf(delete_stopwords(train), True)\n",
+    "nbm.fit()\n",
+    "matches = nbm.predict(delete_stopwords(verif))\n",
+    "print (\"log without stopwords\")\n",
+    "print (\"Matches:  \", matches) \n",
+    "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
+    "print (\"----------\")\n",
+    "'''"
    ]
   },
   {
@@ -371,14 +465,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "       \n",
+    "    \n"
+   ]
   },
   {
    "cell_type": "markdown",
