Week 3 NBM. TF-IDF modification

--- a/Week_3_NBM/Naive_Bayes_Model.ipynb
+++ b/Week_3_NBM/Naive_Bayes_Model.ipynb
@@ -197,7 +197,7 @@
       "classes ratio =  {'1': 0.6294642857142857, '0': 0.3705357142857143}\n",
       "unique words in corpus =  15295\n",
       "*** ------------------------- ***\n",
-      "Wall time: 5 s\n"
+      "Wall time: 1.67 s\n"
      ]
     }
    ],
@@ -266,7 +266,7 @@
       "Matches:   Counter({True: 211, False: 13})\n",
       "Accuracy:  {True: 0.9419642857142857, False: 0.05803571428571429}\n",
       "----------\n",
-      "Wall time: 8.96 s\n"
+      "Wall time: 3.6 s\n"
      ]
     }
    ],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
     "        for i in range(len(self.corpus)):\n",
     "            if word in self.corpus[i]:\n",
     "                idf[self.labels[i]] += 1\n",
-    "        return {label: self.classes[label]/(idf[label]+1) for label in self.classes}\n",
+    "        return {label: math.log((self.classes[label]+2)/(idf[label]+1)) for label in self.classes}\n",
     "    \n",
     "    def get_words_idf(self):\n",
     "        idfs = defaultdict(dict)\n",
@@ -365,24 +365,24 @@
     "                else:\n",
     "                    idf_ = 1.0 # 1.0/tf[word]\n",
     "                if self.isUseLog:\n",
-    "                    p[label] += math.log(tf[word]*idf_)\n",
+    "                    p[label] += math.log(tf[word]/idf_)\n",
     "                else:\n",
-    "                    p[label] *= tf[word]*idf_\n",
+    "                    p[label] *= (tf[word]/idf_)\n",
     "        y = max(p, key=p.get)\n",
     "        return y, p "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pobability    0 {'0': 0.02460375, '1': 6.75e-05}\n",
-      "log           0 {'0': -3.704856408637077, '1': -9.603382960085789}\n"
+      "pobability    0 {'0': 0.22515081802568107, '1': 0.19709985929564233}\n",
+      "log           0 {'0': -1.4909847989936278, '1': -1.6240447786966632}\n"
      ]
     }
    ],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -412,16 +412,24 @@
      "output_type": "stream",
      "text": [
       "*** NaiveBayes data statistic ***\n",
-      "Corpus length =  40\n",
-      "classes count =  {'1': 29, '0': 11}\n",
-      "classes ratio =  {'1': 0.725, '0': 0.275}\n",
-      "unique words in corpus =  2622\n",
+      "Corpus length =  894\n",
+      "classes count =  {'0': 297, '1': 597}\n",
+      "classes ratio =  {'0': 0.33221476510067116, '1': 0.6677852348993288}\n",
+      "unique words in corpus =  26275\n",
       "*** ------------------------- ***\n",
       "pobability\n",
-      "Matches:   Counter({False: 32, True: 8})\n",
-      "Accuracy:  {False: 0.8, True: 0.2}\n",
+      "Matches:   Counter({True: 133, False: 91})\n",
+      "Accuracy:  {True: 0.59375, False: 0.40625}\n",
       "----------\n",
-      "Wall time: 703 ms\n"
+      "log\n",
+      "Matches:   Counter({True: 181, False: 43})\n",
+      "Accuracy:  {True: 0.8080357142857143, False: 0.19196428571428573}\n",
+      "----------\n",
+      "log without stopwords\n",
+      "Matches:   Counter({True: 206, False: 18})\n",
+      "Accuracy:  {True: 0.9196428571428571, False: 0.08035714285714286}\n",
+      "----------\n",
+      "Wall time: 3min 47s\n"
      ]
     }
    ],
@@ -430,9 +438,9 @@
     "\n",
     "# data.csv model\n",
     "data = read_csv_file(\"data.csv\")\n",
-    "train, verif = train_verif_split (data[:200], 80.0)\n",
+    "train, verif = train_verif_split (data, 80.0)  #data[:400]\n",
     "\n",
-    "nbm = NaiveBayesTfIdf(verif)\n",
+    "nbm = NaiveBayesTfIdf(train)\n",
     "nbm.get_data_statistic()\n",
     "nbm.fit()\n",
     "matches = nbm.predict(verif)\n",
@@ -441,7 +449,6 @@
     "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
     "print (\"----------\")\n",
     "\n",
-    "'''\n",
     "nbm = NaiveBayesTfIdf(train, True)\n",
     "nbm.fit()\n",
     "matches = nbm.predict(verif)\n",
@@ -456,8 +463,7 @@
     "print (\"log without stopwords\")\n",
     "print (\"Matches:  \", matches) \n",
     "print (\"Accuracy: \", {i: matches[i]/len(verif) for i in matches}) \n",
-    "print (\"----------\")\n",
-    "'''"
+    "print (\"----------\")\n"
    ]
   },
   {
