Week 3 NBM. Report. Comments

--- a/Week_3_NBM/Naive_Bayes_Model.ipynb
+++ b/Week_3_NBM/Naive_Bayes_Model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Naive Bayes text classification\n",
     "\n",
-    "Naive Bayes model with TF/IDF algorithm to solve text classification problem\n"
+    "Naive Bayes model with classic and TF/IDF algorithm to solve text classification problem\n"
    ]
   },
   {
@@ -44,12 +44,34 @@
    "outputs": [],
    "source": [
     "class NaiveBayes:\n",
+    "    \"\"\"\n",
+    "    Abstract parent class for implementation base skeleton Naive Bayes text classification model\n",
+    "    without classification algorithm. Classification algorithm (classic or TF-IDF) will be implementated in inheritors.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    def __init__(self, data, isUseLog = False):\n",
+    "        \"\"\"\n",
+    "        Constructor, init class fields\n",
+    "        Parameters\n",
+    "            data - texts with labels \n",
+    "            isUseLog - use the sum of logarithms instead of the multiplication of probabilities\n",
+    "        Returns\n",
+    "            no return     \n",
+    "        \"\"\"\n",
     "        self.corpus, self.labels  = self.data_split(data)\n",
     "        self.classes = Counter(self.labels)\n",
     "        self.isUseLog = isUseLog\n",
     "     \n",
     "    def data_split(self, data):\n",
+    "        \"\"\"\n",
+    "        Split text with labels into apart array of word lists and an array of labels\n",
+    "        Words convert to lowercase\n",
+    "        Parameters\n",
+    "            data - texts with labels \n",
+    "        Returns\n",
+    "            corpus - array of texts (text - a list of words)\n",
+    "            labels - array of texts classification labels\n",
+    "        \"\"\"\n",
     "        corpus = []\n",
     "        labels = []\n",
     "        for text, label in data:\n",
@@ -58,6 +80,14 @@
     "        return corpus, labels\n",
     "    \n",
     "    def get_data_statistic(self):\n",
+    "        \"\"\"\n",
+    "        Get main characteristics of the input texts and classes data\n",
+    "        Parameters\n",
+    "            no parameters\n",
+    "        Returns\n",
+    "            no return \n",
+    "            Print to display main characteristics of the input texts and classes data\n",
+    "        \"\"\"\n",
     "        print (\"*** NaiveBayes data statistic ***\")\n",
     "        print (\"Corpus length = \", len(self.corpus))\n",
     "        print (\"classes count = \", dict(self.classes))\n",
@@ -66,21 +96,52 @@
     "        print (\"*** ------------------------- ***\")\n",
     "    \n",
     "    def get_unique_words(self):\n",
+    "        \"\"\"\n",
+    "        Calculate unique words in corpus count\n",
+    "        Parameters\n",
+    "            no parameters\n",
+    "        Returns\n",
+    "            number of unique words in corpus\n",
+    "        \"\"\"\n",
     "        unique_words_in_corpus = Counter()\n",
     "        for doc in self.corpus:\n",
     "            unique_words_in_corpus += Counter(doc)\n",
     "        return len(unique_words_in_corpus)\n",
     "    \n",
     "    def get_prior (self, class_label):\n",
+    "        \"\"\"\n",
+    "        Calculate probability given class in corpus\n",
+    "        Parameters\n",
+    "            class_label - label of class for calc probability\n",
+    "        Returns\n",
+    "            probability class in corpus\n",
+    "        \"\"\"\n",
     "        return self.classes[class_label]/len(self.corpus)          \n",
     "    \n",
     "    def fit(self):\n",
+    "        # abstract method, will be implemented in the inheritors\n",
+    "        \"\"\"\n",
+    "        Model fiting by calculating parameters and store in class fields  \n",
+    "        \"\"\"\n",
     "        pass\n",
     "    \n",
     "    def predict_doc(self, doc):\n",
+    "        # abstract method, will be implemented in the inheritors\n",
+    "        \"\"\"\n",
+    "        Classification doc to class\n",
+    "        Parameters\n",
+    "            doc - text (one doc) for classification\n",
+    "        \"\"\"\n",
     "        pass\n",
     "    \n",
     "    def predict(self, docs):\n",
+    "        \"\"\"\n",
+    "        Predicts and checks matches for a lot of texts with labels\n",
+    "        Parameters\n",
+    "            docs - texts with labels\n",
+    "        Returns\n",
+    "            matches for each doc in docs in Counter format\n",
+    "        \"\"\"\n",
     "        matches = []\n",
     "        for doc, label in docs:\n",
     "            y,p = self.predict_doc(doc)\n",
@@ -95,7 +156,19 @@
    "outputs": [],
    "source": [
     "class NaiveBayesClassic(NaiveBayes):\n",
+    "    \"\"\"\n",
+    "    Class implementing Naive Bayes text classification model\n",
+    "    \"\"\"\n",
+    "    \n",
     "    def get_class_words(self):\n",
+    "        \"\"\"\n",
+    "        Scan corpus for build words occurrences dictionary\n",
+    "        Parameters\n",
+    "            no parameters\n",
+    "        Returns\n",
+    "            words - words in corpus for each label, format - dict(label, Counter)\n",
+    "            total - total words in corpus for each label, format - dict(label, count)\n",
+    "        \"\"\"\n",
     "        total = defaultdict(int)\n",
     "        words = defaultdict(Counter)       \n",
     "        for i in range(len(self.corpus)):           \n",
@@ -104,15 +177,38 @@
     "        return words, total\n",
     "        \n",
     "    def get_p (self, class_label, word):\n",
+    "        \"\"\"\n",
+    "        Calculate conditional probability for word in class\n",
+    "        Parameters\n",
+    "            class_label - label of class\n",
+    "            word - word for calc conditional probability\n",
+    "        Returns\n",
+    "            p - conditional probability for word in class\n",
+    "        \"\"\"\n",
     "        # P(word|class) = (word_count_in_class + 1)/(total_words_in_class+total_unique_words_in_corpus) \n",
     "        p = (self.words[class_label][word] + 1)/(self.total[class_label] + self.unique)\n",
     "        return p\n",
     "    \n",
     "    def fit(self):\n",
+    "        \"\"\"\n",
+    "        Model fiting by calculating parameters and store in class fields  \n",
+    "        Parameters\n",
+    "            no parameters\n",
+    "        Returns\n",
+    "            no return  \n",
+    "        \"\"\"\n",
     "        self.words, self.total = self.get_class_words()\n",
     "        self.unique = self.get_unique_words()\n",
     "        \n",
     "    def predict_doc(self, doc):\n",
+    "        \"\"\"\n",
+    "        Classification doc to class\n",
+    "        Parameters\n",
+    "            doc - text (one doc) for classification\n",
+    "        Returns\n",
+    "            y - class label with max probabilitiy\n",
+    "            p - dict of probabilities of affiliation to each class\n",
+    "        \"\"\"\n",
     "        p = dict()\n",
     "        for label in self.classes:\n",
     "            p[label] = self.get_prior (label)\n",
@@ -325,13 +421,31 @@
    "outputs": [],
    "source": [
     "class NaiveBayesTfIdf(NaiveBayes):\n",
+    "    \"\"\"\n",
+    "    Class implementing Naive Bayes text classification model with tf-idf algorithm\n",
+    "    \"\"\"\n",
+    "    \n",
     "    def calc_tf(self, doc):\n",
+    "        \"\"\"\n",
+    "        Calculate term frequency for text\n",
+    "        Parameters\n",
+    "            doc - text, array of words\n",
+    "        Returns\n",
+    "            tf - term frequency for each word in Counter format \n",
+    "        \"\"\"\n",
     "        tf = Counter(doc)\n",
     "        for i in tf:\n",
     "            tf[i] = tf[i]/float(len(doc))\n",
     "        return tf\n",
     "\n",
     "    def calc_idf(self, word):\n",
+    "        \"\"\"\n",
+    "        Calculate inverse document frequency for word in corpus\n",
+    "        Parameters\n",
+    "            word - word for calc\n",
+    "        Returns\n",
+    "            inverse document frequency word in corpus for each class in format dict(class, idf)\n",
+    "        \"\"\"\n",
     "        idf = defaultdict(float)\n",
     "        for i in range(len(self.corpus)):\n",
     "            if word in self.corpus[i]:\n",
@@ -339,6 +453,13 @@
     "        return {label: math.log((self.classes[label]+2)/(idf[label]+1)) for label in self.classes}\n",
     "    \n",
     "    def get_words_idf(self):\n",
+    "        \"\"\"\n",
+    "        Calculate inverse document frequency for each unique word in corpus\n",
+    "        Parameters\n",
+    "            no parameters\n",
+    "        Returns\n",
+    "            idfs - inverse document frequency in format dictionary(word, idf)\n",
+    "        \"\"\"\n",
     "        idfs = defaultdict(dict)\n",
     "        \n",
     "        unique_words_in_corpus = Counter()\n",
@@ -349,9 +470,24 @@
     "        return idfs\n",
     "    \n",
     "    def fit(self):\n",
+    "        \"\"\"\n",
+    "        Model fiting by calculating parameters and store in class fields  \n",
+    "        Parameters\n",
+    "            no parameters\n",
+    "        Returns\n",
+    "            no return  \n",
+    "        \"\"\"\n",
     "        self.idf = self.get_words_idf()\n",
     "        \n",
     "    def predict_doc(self, doc):\n",
+    "        \"\"\"\n",
+    "        Classification doc to class\n",
+    "        Parameters\n",
+    "            doc - text (one doc) for classification\n",
+    "        Returns\n",
+    "            y - class label with max probabilitiy\n",
+    "            p - dict of probabilities of affiliation to each class\n",
+    "        \"\"\"\n",
     "        doc = doc.lower().split()\n",
     "        tf = self.calc_tf(doc)\n",
     "        p = dict()\n",
