--- a/optimization_algorithms/Optimization methods.ipynb
+++ b/optimization_algorithms/Optimization methods.ipynb
@@ -19,10 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -59,10 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: update_parameters_with_gd\n",
@@ -89,8 +85,8 @@
     "    # Update rule for each parameter\n",
     "    for l in range(L):\n",
     "        ### START CODE HERE ### (approx. 2 lines)\n",
-    "        parameters[\"W\" + str(l+1)] = None\n",
-    "        parameters[\"b\" + str(l+1)] = None\n",
+    "        parameters[\"W\" + str(l+1)] = parameters[\"W\" + str(l+1)] - learning_rate * grads['dW' + str(l+1)]\n",
+    "        parameters[\"b\" + str(l+1)] = parameters['b' + str(l+1)] - learning_rate * grads['db' + str(l+1)]\n",
     "        ### END CODE HERE ###\n",
     "        \n",
     "    return parameters"
@@ -98,12 +94,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 1.63535156 -0.62320365 -0.53718766]\n",
+      " [-1.07799357  0.85639907 -2.29470142]]\n",
+      "b1 = [[ 1.74604067]\n",
+      " [-0.75184921]]\n",
+      "W2 = [[ 0.32171798 -0.25467393  1.46902454]\n",
+      " [-2.05617317 -0.31554548 -0.3756023 ]\n",
+      " [ 1.1404819  -1.09976462 -0.1612551 ]]\n",
+      "b2 = [[-0.88020257]\n",
+      " [ 0.02561572]\n",
+      " [ 0.57539477]]\n"
+     ]
+    }
+   ],
    "source": [
     "parameters, grads, learning_rate = update_parameters_with_gd_test_case()\n",
     "\n",
@@ -248,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: random_mini_batches\n",
@@ -302,9 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_assess, Y_assess, mini_batch_size = random_mini_batches_test_case()\n",
@@ -396,9 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: initialize_velocity\n",
@@ -435,9 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "parameters = initialize_velocity_test_case()\n",
@@ -506,9 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: update_parameters_with_momentum\n",
@@ -555,9 +557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "parameters, grads, v = update_parameters_with_momentum_test_case()\n",
@@ -714,9 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: initialize_adam\n",
@@ -761,9 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "parameters = initialize_adam_test_case()\n",
@@ -861,9 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: update_parameters_with_adam\n",
@@ -936,7 +930,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1062,9 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_X, train_Y = load_dataset()"
@@ -1086,9 +1077,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def model(X, Y, layers_dims, optimizer, learning_rate = 0.0007, mini_batch_size = 64, beta = 0.9,\n",
@@ -1191,7 +1180,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -1225,9 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# train 3-layer model\n",
@@ -1259,9 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# train 3-layer model\n",
@@ -1375,7 +1359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
