Build mini-batches from the training set

--- a/optimization_algorithms/Optimization methods.ipynb
+++ b/optimization_algorithms/Optimization methods.ipynb
@@ -19,17 +19,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/eugene/Projects/ISD/solvve/ml_course/optimization_algorithms/opt_utils.py:76: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "/home/eugene/Projects/Sources/ISD/solvve/ml_course/optimization_algorithms/opt_utils.py:76: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
       "  assert(parameters['W' + str(l)].shape == layer_dims[l], layer_dims[l-1])\n",
-      "/home/eugene/Projects/ISD/solvve/ml_course/optimization_algorithms/opt_utils.py:77: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
-      "  assert(parameters['W' + str(l)].shape == layer_dims[l], 1)\n"
+      "/home/eugene/Projects/Sources/ISD/solvve/ml_course/optimization_algorithms/opt_utils.py:77: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
+      "  assert(parameters['W' + str(l)].shape == layer_dims[l], 1)\n",
+      "/home/eugene/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
      ]
     }
    ],
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -263,10 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: random_mini_batches\n",
@@ -297,8 +297,8 @@
     "    num_complete_minibatches = math.floor(m/mini_batch_size) # number of mini batches of size mini_batch_size in your partitionning\n",
     "    for k in range(0, num_complete_minibatches):\n",
     "        ### START CODE HERE ### (approx. 2 lines)\n",
-    "        mini_batch_X = None\n",
-    "        mini_batch_Y = None\n",
+    "        mini_batch_X = shuffled_X[:, k * mini_batch_size : (1 + k) * mini_batch_size]\n",
+    "        mini_batch_Y = shuffled_Y[:, k * mini_batch_size : (1 + k) * mini_batch_size]\n",
     "        ### END CODE HERE ###\n",
     "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
     "        mini_batches.append(mini_batch)\n",
@@ -306,8 +306,8 @@
     "    # Handling the end case (last mini-batch < mini_batch_size)\n",
     "    if m % mini_batch_size != 0:\n",
     "        ### START CODE HERE ### (approx. 2 lines)\n",
-    "        mini_batch_X = None\n",
-    "        mini_batch_Y = None\n",
+    "        mini_batch_X = shuffled_X[:, num_complete_minibatches * mini_batch_size : m -  num_complete_minibatches * mini_batch_size]\n",
+    "        mini_batch_Y = shuffled_Y[:, num_complete_minibatches * mini_batch_size : m -  num_complete_minibatches * mini_batch_size]\n",
     "        ### END CODE HERE ###\n",
     "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
     "        mini_batches.append(mini_batch)\n",
@@ -317,11 +317,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape of the 1st mini_batch_X: (12288, 64)\n",
+      "shape of the 2nd mini_batch_X: (12288, 64)\n",
+      "shape of the 3rd mini_batch_X: (12288, 0)\n",
+      "shape of the 1st mini_batch_Y: (1, 64)\n",
+      "shape of the 2nd mini_batch_Y: (1, 64)\n",
+      "shape of the 3rd mini_batch_Y: (1, 0)\n",
+      "mini batch sanity check: [ 0.90085595 -0.7612069   0.2344157 ]\n"
+     ]
+    }
+   ],
    "source": [
     "X_assess, Y_assess, mini_batch_size = random_mini_batches_test_case()\n",
     "mini_batches = random_mini_batches(X_assess, Y_assess, mini_batch_size)\n",
@@ -1391,7 +1403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
