Use momentum to reduce a GD oscillations

--- a/optimization_algorithms/Optimization methods.ipynb
+++ b/optimization_algorithms/Optimization methods.ipynb
@@ -19,17 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/eugene/Projects/Sources/ISD/solvve/ml_course/optimization_algorithms/opt_utils.py:76: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
-      "  assert(parameters['W' + str(l)].shape == layer_dims[l], layer_dims[l-1])\n",
-      "/home/eugene/Projects/Sources/ISD/solvve/ml_course/optimization_algorithms/opt_utils.py:77: SyntaxWarning: assertion is always true, perhaps remove parentheses?\n",
-      "  assert(parameters['W' + str(l)].shape == layer_dims[l], 1)\n",
       "/home/eugene/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
@@ -70,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -265,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,8 +302,8 @@
     "    # Handling the end case (last mini-batch < mini_batch_size)\n",
     "    if m % mini_batch_size != 0:\n",
     "        ### START CODE HERE ### (approx. 2 lines)\n",
-    "        mini_batch_X = shuffled_X[:, num_complete_minibatches * mini_batch_size : m -  num_complete_minibatches * mini_batch_size]\n",
-    "        mini_batch_Y = shuffled_Y[:, num_complete_minibatches * mini_batch_size : m -  num_complete_minibatches * mini_batch_size]\n",
+    "        mini_batch_X = shuffled_X[:, num_complete_minibatches * mini_batch_size : m - num_complete_minibatches * mini_batch_size]\n",
+    "        mini_batch_Y = shuffled_Y[:, num_complete_minibatches * mini_batch_size : m - num_complete_minibatches * mini_batch_size]\n",
     "        ### END CODE HERE ###\n",
     "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
     "        mini_batches.append(mini_batch)\n",
@@ -317,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -423,10 +419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: initialize_velocity\n",
@@ -453,8 +447,8 @@
     "    # Initialize velocity\n",
     "    for l in range(L):\n",
     "        ### START CODE HERE ### (approx. 2 lines)\n",
-    "        v[\"dW\" + str(l+1)] = None\n",
-    "        v[\"db\" + str(l+1)] = None\n",
+    "        v[\"dW\" + str(l+1)] = np.zeros(parameters[\"W\" + str(l+1)].shape)\n",
+    "        v[\"db\" + str(l+1)] = np.zeros(parameters[\"b\" + str(l+1)].shape)\n",
     "        ### END CODE HERE ###\n",
     "        \n",
     "    return v"
@@ -462,11 +456,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v[\"dW1\"] = [[0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "v[\"db1\"] = [[0.]\n",
+      " [0.]]\n",
+      "v[\"dW2\"] = [[0. 0. 0.]\n",
+      " [0. 0. 0.]\n",
+      " [0. 0. 0.]]\n",
+      "v[\"db2\"] = [[0.]\n",
+      " [0.]\n",
+      " [0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "parameters = initialize_velocity_test_case()\n",
     "\n",
@@ -533,10 +542,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# GRADED FUNCTION: update_parameters_with_momentum\n",
@@ -570,11 +577,11 @@
     "        \n",
     "        ### START CODE HERE ### (approx. 4 lines)\n",
     "        # compute velocities\n",
-    "        v[\"dW\" + str(l+1)] = None\n",
-    "        v[\"db\" + str(l+1)] = None\n",
+    "        v[\"dW\" + str(l+1)] = beta * v['dW' + str(l+1)] + (1 - beta) * grads[\"dW\" + str(l+1)]\n",
+    "        v[\"db\" + str(l+1)] = beta * v['db' + str(l+1)] + (1 - beta) * grads[\"db\" + str(l+1)]\n",
     "        # update parameters\n",
-    "        parameters[\"W\" + str(l+1)] = None\n",
-    "        parameters[\"b\" + str(l+1)] = None\n",
+    "        parameters[\"W\" + str(l+1)] = parameters[\"W\" + str(l+1)] - learning_rate * v[\"dW\" + str(l+1)]\n",
+    "        parameters[\"b\" + str(l+1)] = parameters[\"b\" + str(l+1)] - learning_rate * v[\"db\" + str(l+1)]\n",
     "        ### END CODE HERE ###\n",
     "        \n",
     "    return parameters, v"
@@ -582,11 +589,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 1.62544598 -0.61290114 -0.52907334]\n",
+      " [-1.07347112  0.86450677 -2.30085497]]\n",
+      "b1 = [[ 1.74493465]\n",
+      " [-0.76027113]]\n",
+      "W2 = [[ 0.31930698 -0.24990073  1.4627996 ]\n",
+      " [-2.05974396 -0.32173003 -0.38320915]\n",
+      " [ 1.13444069 -1.0998786  -0.1713109 ]]\n",
+      "b2 = [[-0.87809283]\n",
+      " [ 0.04055394]\n",
+      " [ 0.58207317]]\n",
+      "v[\"dW1\"] = [[-0.11006192  0.11447237  0.09015907]\n",
+      " [ 0.05024943  0.09008559 -0.06837279]]\n",
+      "v[\"db1\"] = [[-0.01228902]\n",
+      " [-0.09357694]]\n",
+      "v[\"dW2\"] = [[-0.02678881  0.05303555 -0.06916608]\n",
+      " [-0.03967535 -0.06871727 -0.08452056]\n",
+      " [-0.06712461 -0.00126646 -0.11173103]]\n",
+      "v[\"db2\"] = [[0.02344157]\n",
+      " [0.16598022]\n",
+      " [0.07420442]]\n"
+     ]
+    }
+   ],
    "source": [
     "parameters, grads, v = update_parameters_with_momentum_test_case()\n",
     "\n",
