--- a/optimization_algorithms/Optimization methods.ipynb
+++ b/optimization_algorithms/Optimization methods.ipynb
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,8 +302,8 @@
     "    # Handling the end case (last mini-batch < mini_batch_size)\n",
     "    if m % mini_batch_size != 0:\n",
     "        ### START CODE HERE ### (approx. 2 lines)\n",
-    "        mini_batch_X = shuffled_X[:, num_complete_minibatches * mini_batch_size : m - num_complete_minibatches * mini_batch_size]\n",
-    "        mini_batch_Y = shuffled_Y[:, num_complete_minibatches * mini_batch_size : m - num_complete_minibatches * mini_batch_size]\n",
+    "        mini_batch_X = shuffled_X[:, (num_complete_minibatches) * mini_batch_size : m]\n",
+    "        mini_batch_Y = shuffled_Y[:, (num_complete_minibatches) * mini_batch_size : m]\n",
     "        ### END CODE HERE ###\n",
     "        mini_batch = (mini_batch_X, mini_batch_Y)\n",
     "        mini_batches.append(mini_batch)\n",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -322,10 +322,10 @@
      "text": [
       "shape of the 1st mini_batch_X: (12288, 64)\n",
       "shape of the 2nd mini_batch_X: (12288, 64)\n",
-      "shape of the 3rd mini_batch_X: (12288, 0)\n",
+      "shape of the 3rd mini_batch_X: (12288, 20)\n",
       "shape of the 1st mini_batch_Y: (1, 64)\n",
       "shape of the 2nd mini_batch_Y: (1, 64)\n",
-      "shape of the 3rd mini_batch_Y: (1, 0)\n",
+      "shape of the 3rd mini_batch_Y: (1, 20)\n",
       "mini batch sanity check: [ 0.90085595 -0.7612069   0.2344157 ]\n"
      ]
     }
