Add cell with TF-IDF results

--- a/Naive_Bayes_text_classification/Naive_bayes.ipynb
+++ b/Naive_Bayes_text_classification/Naive_bayes.ipynb
@@ -197,10 +197,25 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9642857142857143"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Fit Naive Bayes\n",
     "nb = NaiveBayes()\n",
-    "nb.fit(train_samples)"
+    "nb.fit(train_samples)\n",
+    "\n",
+    "result = nb.predict(test_samples)\n",
+    "result"
    ]
   },
   {
@@ -211,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "26456"
+       "0.9598214285714286"
       ]
      },
      "execution_count": 7,
@@ -220,48 +235,11 @@
     }
    ],
    "source": [
-    "len(nb.unique_words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9910514541387024"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = nb.predict(train_samples)\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9642857142857143"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result = nb.predict(test_samples)\n",
+    "# Fit Naive Bayes with TF-IDF\n",
+    "nb = NaiveBayes()\n",
+    "nb.fit(train_samples, tfidf=True)\n",
+    "\n",
+    "result = nb.predict(test_samples, tfidf=True)\n",
     "result"
    ]
   },
@@ -332,7 +310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
